--- a/src/ui.scss
+++ b/src/ui.scss
@@ -178,8 +178,11 @@ body {
     bottom: 20px;
     transition: all 0.3s ease-in-out;
   }
-
   pre {
-    margin-bottom: 0;
+    margin: 0;
+  }
+  code {
+    display: block;
+    margin: $global-gutter;
   }
 }
