--- a/src/ui.scss
+++ b/src/ui.scss
@@ -23,13 +23,6 @@
   @import './styles/highlight.js/default';
 }
 
-.theme__dracula {
-  @import './styles/highlight.js/dracula';
-}
-
-.theme__ocean {
-  @import './styles/highlight.js/ocean';
-}
 
 .theme__paraiso-dark {
   @import './styles/highlight.js/paraiso-dark';
@@ -37,14 +30,6 @@
 
 .theme__paraiso-light {
   @import './styles/highlight.js/paraiso-light';
-}
-
-.theme__solarized-dark {
-  @import './styles/highlight.js/solarized-dark';
-}
-
-.theme__solarized-light {
-  @import './styles/highlight.js/solarized-light';
 }
 
 .theme__vs {
@@ -85,6 +70,7 @@ button {
 .divider {
   margin: $global-gutter 0;
 }
+
 .form {
   display: flex;
   flex-direction: row;
@@ -117,6 +103,7 @@ button {
   display: flex;
   flex-direction: row;
   align-items: center;
+
   label {
     color: rgba(0, 0, 0, 0.8);
     font-weight: 600;
@@ -133,23 +120,27 @@ button {
 }
 
 .original {
-  margin-right: $global-gutter/2;;
+  margin-right: $global-gutter/2;
+  ;
 }
 
 .preview {
-  margin-left: $global-gutter/2;;
+  margin-left: $global-gutter/2;
+  ;
 }
 
 .original,
 .preview {
   width: 48.5%;
   height: 350px;
+
   pre {
     width: 100%;
     display: block;
     overflow: auto;
     border-radius: 5px;
   }
+
   p {
     color: rgba(0, 0, 0, 0.8);
     font-weight: 600;
@@ -173,21 +164,24 @@ button {
   bottom: 0px;
   overflow: auto;
   width: 100%;
-  box-shadow: 0px -3px 1px -2px rgba(0,0,0,.2), 0px -2px 2px 0 rgba(0,0,0,.14), 0 1px 6px 0 rgba(0,0,0,.12);
+  box-shadow: 0px -3px 1px -2px rgba(0, 0, 0, .2), 0px -2px 2px 0 rgba(0, 0, 0, .14), 0 1px 6px 0 rgba(0, 0, 0, .12);
   border-top-right-radius: 5px;
   border-top-left-radius: 5px;
   border-color: #ffeeba;
   opacity: 0;
-  display:none;
+  display: none;
+
   &.show-error {
     opacity: 1;
     bottom: 20px;
     transition: all 0.3s ease-in-out;
     display: inline;
   }
+
   pre {
     margin: 0;
   }
+
   code {
     display: block;
     margin: $global-gutter;
