Added support to new languages and styles

--- a/src/styles/highlight.js/_solarized-dark.scss
+++ b/src/styles/highlight.js/_solarized-dark.scss
@@ -1,1 +1,1 @@
-@import './../../../node_modules/highlight.js/scss/solarized-dark.scss';
+@import './../../../node_modules/highlight.js/scss/base16/solarized-dark.scss';
