--- a/src/styles/highlight.js/_dracula.scss
+++ b/src/styles/highlight.js/_dracula.scss
@@ -1,1 +1,1 @@
-@import './../../../node_modules/highlight.js/scss/dracula.scss';
+@import './../../../node_modules/highlight.js/scss/base16/dracula.scss';
