--- a/src/styles/highlight.js/_ocean.scss
+++ b/src/styles/highlight.js/_ocean.scss
@@ -1,1 +1,1 @@
-@import './../../../node_modules/highlight.js/scss/ocean.scss';
+@import './../../../node_modules/highlight.js/scss/base16/ocean.scss';
