--- a/src/styles/highlight.js/_solarized-light.scss
+++ b/src/styles/highlight.js/_solarized-light.scss
@@ -1,1 +1,1 @@
-@import './../../../node_modules/highlight.js/scss/solarized-light.scss';
+@import './../../../node_modules/highlight.js/scss/base16/solarized-light.scss';
