--- a/src/ui.scss
+++ b/src/ui.scss
@@ -1,3 +1,4 @@
+@use 'sass:math';
 @import './styles/figma.css';
 
 //// Highlight.js - Theme
@@ -133,11 +134,11 @@ button {
 }
 
 .original {
-  margin-right: $global-gutter/2;;
+  margin-right: math.div($global-gutter,2);
 }
 
 .preview {
-  margin-left: $global-gutter/2;;
+  margin-left: math.div($global-gutter,2);
 }
 
 .original,
