--- a/src/styles/highlight.js/_android-studio.scss
+++ b/src/styles/highlight.js/_android-studio.scss
@@ -1,1 +1,1 @@
-@import './../../../node_modules/highlight.js/scss/android-studio.scss';
+@import './../../../node_modules/highlight.js/scss/androidstudio.scss';
