--- a/src/ui.scss
+++ b/src/ui.scss
@@ -225,3 +225,14 @@ button {
     margin: $global-gutter;
   }
 }
+
+.buttons {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: flex-end;
+  justify-content: flex-end;  
+  button {
+    margin-left: $global-gutter;
+  }
+}
