--- a/src/ui.scss
+++ b/src/ui.scss
@@ -64,14 +64,14 @@ button {
 .field {
   margin-right: $global-gutter;
   display: flex;
-  flex-direction: row;
-  align-items: center;
+  flex-direction: column;
+  align-items: flex-start;
   label {
     color: rgba(0, 0, 0, 0.8);
     font-weight: 600;
     font-size: 11px;
     line-height: 16px;
-    width: 200px;
+    margin-bottom: 4px;
   }
 }
 
